div/lubelogger/resources/lubelogger-namespace.yaml
***REMOVED*** Create Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: lubelogger
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
  labels:
    name: lubelogger
